<resources>
    <string name="app_name">Travelmantics</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="save_menu">save_menu</string>
    <string name="deal_descriptiion">Deal Descriptiion</string>
    <string name="deal_price">Deal price</string>
    <string name="delete_deal">delete deal</string>
    <string name="new_travel_deal">New Travel Deal</string>
    <string name="logout">Logout</string>
    <string name="deal_title">Deal title</string>
    <string name="upload_image">Upload Image</string>
    <string name="todo">TODO</string>
</resources>
